--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 ############################
 
 # Name of website
-title: My Website
+title: sinister6th.github.io
 
 # Your name to show in the footer
 author: Some Person
